Добавляет третье молальное окно

--- a/source/index.html
+++ b/source/index.html
@@ -366,7 +366,7 @@
         </div>
         <div class="modal-work__content">
           <h3 class="modal-work__title">Project title</h3>
-          <p class="modal-work__info">category <span class="modal-work__info-divider">|</span> 20118</p>
+          <p class="modal-work__info">category <span class="modal-work__info-divider">|</span> 2018</p>
           <p class="modal-work__client">Client:<span class="modal-work__client-name">Creative Agency</span></p>
           <div class="modal-work__text-wrapper">
             <p class="modal-work__text">Lorem ipsum dolor sit amet consectetur,
@@ -538,8 +538,21 @@
                 <a class="contact__info-link contact__info-link--mail" href="mailto:example@gmail.com">example@gmail.com</a>
               </li>
             </ul>
+
+            <form class="form" action="/" method="POST">
+              <p class="form__wrapper">
+                <label class="form__label" for="email">Adress e-mail</label>
+                <input class="form__input" type="text" name="email" id="email" placeholder="Adress e-mail">
+              </p>
+              <p class="form__wrapper">
+                <label class="form__label" for="input-text">Request</label>
+                <textarea class="form__textarea" name="input-text" id="input-text" placeholder="Type your request..."></textarea>
+              </p>
+              <div class="text-right">
+                <button class="button" type="submit">send</button>
+              </div>
+            </form>
           </div>
-          <div class="contact__right"></div>
         </div>
     </div>
   </div>
